Potential fix for flickering on hover

--- a/src/components/astronaut-card/astronaut-card.sass
+++ b/src/components/astronaut-card/astronaut-card.sass
@@ -5,95 +5,112 @@
 .astronaut-card
   color: white
   position: relative
-  padding: 3rem
-  display: flex
-  flex-direction: column
-  justify-content: flex-end
-  overflow: hidden
-  transition: box-shadow .5s ease
 
-  > .shine
+  &:before
     content: ''
-    z-index: 3
     position: absolute
-    top: 0
-    left: 0
+    top: -1rem
+    left: -1rem
+    right: -1rem
+    bottom: -1rem
+    z-index: 0
+
+  > .card
+    padding: 3rem
+    display: flex
+    flex-direction: column
+    justify-content: flex-end
+    transition: box-shadow .5s ease
     width: 100%
     height: 100%
-    opacity: 0
-    pointer-events: none
-    transition: opacity .2s ease
-
-  > img
-    position: absolute
-    top: 0
-    left: 0
-    z-index: 1
-    width: 100%
-    height: 100%
-    object-fit: cover
-    object-position: top
-
-  > .name
-    font-size: 4rem
-    line-height: 5rem
-    font-weight: bold
-    text-transform: uppercase
-
-  > .name, > .info
-    position: relative
-    z-index: 3
-    transition: transform .2s ease, margin .2s ease
-
-  > .info
-    height: 0
-    opacity: 0
-    transition: height .3s ease, opacity .3s ease, padding .3s ease
     overflow: hidden
 
-  > .info > p
-    font-size: 1.6rem
-    line-height: 1.5
-    margin-bottom: 1em
+    > .shine
+      content: ''
+      z-index: 3
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      opacity: 0
+      pointer-events: none
+      transition: opacity .2s ease
 
-    &:last-child
-      margin-bottom: 0
-
-  .no-touchevents &:hover
-    z-index: 10
-    animation: from-transform .5s ease
-    box-shadow: 0 0.5rem 10rem rgba(black, 0.2)
+    > img
+      position: absolute
+      top: 0
+      left: 0
+      z-index: 1
+      width: 100%
+      height: 100%
+      object-fit: cover
+      object-position: top
 
     > .name
-      margin-bottom: 1.5rem
+      font-size: 4rem
+      line-height: 5rem
+      font-weight: bold
+      text-transform: uppercase
 
-    > .info, > .shine
-      opacity: 1
+    > .name, > .info
+      position: relative
+      z-index: 3
+      transition: transform .2s ease, margin .2s ease
+
+    > .info
+      height: 0
+      opacity: 0
+      transition: height .3s ease, opacity .3s ease, padding .3s ease
+      overflow: hidden
+
+    > .info > p
+      font-size: 1.6rem
+      line-height: 1.5
+      margin-bottom: 1em
+
+      &:last-child
+        margin-bottom: 0
+
+    @media screen and (max-width: $small-grid)
+      padding: 1.5rem
+
+      > .name
+        font-size: 1.6rem
+        line-height: 2rem
+
+      > .info > p
+        font-size: 1.4rem
+
+  .no-touchevents &:hover
+    > .card
+      z-index: 10
+      animation: from-transform .5s ease
+      box-shadow: 0 0.5rem 10rem rgba(black, 0.2)
+
+      > .name
+        margin-bottom: 1.5rem
+
+      > .info, > .shine
+        opacity: 1
 
   .no-touchevents &:not(:hover)
-    transform: none !important
-    transition: transform .5s ease
+    > .card
+      transform: none !important
+      transition: transform .5s ease
 
   .no-touchevents &:not(:hover):not(:focus),
   .touchevents &:not(:focus)
-    > .info
-      height: 0 !important
+    > .card
+      > .info
+        height: 0 !important
 
   &:focus
     outline: none
 
-    > .name
-      margin-bottom: 1.5rem
+    > .card
+      > .name
+        margin-bottom: 1.5rem
 
-    > .info
-      opacity: 1
-
-  @media screen and (max-width: $small-grid)
-    padding: 1.5rem
-
-    > .name
-      font-size: 1.6rem
-      line-height: 2rem
-
-    > .info > p
-      font-size: 1.4rem
+      > .info
+        opacity: 1
